--- a/resume/Resume.tex
+++ b/resume/Resume.tex
@@ -105,16 +105,10 @@
 
 \begin{document}
 
-%----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
-
 \begin{center}
   \textbf{\Huge \scshape Eric Chuang} \\ \vspace{1pt}
   \small 650-200-5420 $|$ \href{mailto:echuang1@ucsc.edu}{\underline{echuang1@ucsc.edu}} $|$
-  % \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/echuang1}} $|$
+  \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/echuang1}} $|$
   \href{https://github.com/ericbreh}{\underline{github.com/ericbreh}}
 \end{center}
 
