--- a/resume/Resume.tex
+++ b/resume/Resume.tex
@@ -119,7 +119,7 @@
 {University of California - Santa Cruz}{September 2022 -- June 2025}
 {Bachelor of Science in Computer Engineering}{3.96 GPA}
 \resumeItemListStart
-\resumeItem{Relevant courses: Data Structures and Algorithms, Computer Systems Design, Logic Design, Computer Architecture, Parallel and Concurrent Programming, VLSI Digital System Design, Verilog Project to Silicon}
+\resumeItem{Relevant courses: Data Structures and Algorithms, Computer Systems Design, Computer Architecture, Parallel and Concurrent Programming, Machine Learning}
 \resumeItemListEnd
 \resumeSubHeadingListEnd
 
@@ -129,7 +129,7 @@
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{Software Engineer}{March 2024 -- June 2024}
+{Software Engineer Intern}{March 2024 -- June 2024}
 {College Sauce}{Santa Barbara, CA}
 \resumeItemListStart
 \resumeItem{Developed a Python web scraping script to automatically extract and load course information into PostgreSQL database, saving 50+ hours of manual work per year and ensuring data accuracy}
@@ -207,7 +207,7 @@
   \small{\item{
                 \textbf{Languages}{: Python, Go, C/C++, Dart, Javascript/Typescript, HTML/CSS, SQL, SystemVerilog} \\
                 \textbf{Frameworks}{: Flutter, React, Node.js, Next.js, Remix, Tailwind CSS} \\
-                \textbf{Technologies}{: Google Cloud Platform, Firebase, Supabase, IOS/Android App Development, OpenCV, DeepFace, Playwright, Selenium} \\
+                \textbf{Technologies}{: Google Cloud Platform, Firebase, Supabase, IOS/Android App Development, OpenCV} \\
                 \textbf{Developer Tools}{: Git, Docker} \\
           }}
 \end{itemize}
