--- a/resume/Resume.tex
+++ b/resume/Resume.tex
@@ -207,7 +207,7 @@
   \small{\item{
                 \textbf{Languages}{: Python, Go, C/C++, Dart, Javascript/Typescript, HTML/CSS, SQL, SystemVerilog} \\
                 \textbf{Frameworks}{: Flutter, React, Node.js, Next.js, Remix, Tailwind CSS} \\
-                \textbf{Technologies}{: Google Cloud Platform, Firebase, Supabase, IOS/Android App Development, OpenCV} \\
+                \textbf{Technologies}{: Google Cloud Platform, Firebase, Supabase, IOS/Android App Development, OpenCV, SKLearn} \\
                 \textbf{Developer Tools}{: Git, Docker} \\
           }}
 \end{itemize}
