--- a/resume/Resume.tex
+++ b/resume/Resume.tex
@@ -116,8 +116,15 @@
 \section{Education}
 \resumeSubHeadingListStart
 \resumeSubheading
+{University of California - Berkeley}{August 2025 -- May 2026}
+{Master of Engineering in Mechanical Engineering }{}
+\resumeItemListStart
+\resumeItem{Fung Excellence Scholarship Recipient}
+\resumeItemListEnd
+
+\resumeSubheading
 {University of California - Santa Cruz}{September 2022 -- June 2025}
-{Bachelor of Science in Computer Engineering}{3.96 GPA}
+{Bachelor of Science in Computer Engineering, Minor in Computer Science}{3.96 GPA}
 \resumeItemListStart
 \resumeItem{Relevant courses: Data Structures and Algorithms, Computer Systems Design, Computer Architecture, Parallel and Concurrent Programming, Machine Learning}
 \resumeItemListEnd
